more updates on menu, searchbar

--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -15,3 +15,9 @@ mn:
       top_stat: 'Нийт: <strong>%{listing_total}</strong> тохиролцоо. Өнөөдөр: <strong>%{listing_today}</strong> тохиролцоо орсон байна.'
       about_us: Бидний тухай
       terms_of_use: Үйлчилгээний нөхцөл
+  js_view:
+    category:
+      header: Ангилал
+    search_bar:
+      all_category: Бүгд
+      search: Хайх
