--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -22,9 +22,12 @@ mn:
       search_bar:
         all_category: Бүгд
         search: Хайх
+    home:
+      index:
+        add_spec: Тохиролцоо оруулах
     listings:
       new:
-        title: Тохиролцоо нэмэх
+        title: Тохиролцоо оруулах
         general_info:
           section_title: Ерөнхий мэдээлэл
           title: Гарчиг
@@ -36,14 +39,25 @@ mn:
           section_title: Дэлгэрэнгүй мэдээлэл
           image: Зураг
           description: Барааны тайлбар
-          add_spec: Өөр үзүүлэлт нэмэх
-          remove_spec: Хасах
+          add_spec:
+            title: Мэдээлэл нэмэх
+            name: Нэр
+            value: Утгас
+            cancel: Буцах
+            add: Нэмэх
+          remove_spec: хасах
         contact_info:
           section_title: Холбоо барих мэдээлэл
-          phone: Утас
+          reuse_recent_contacts: Сүүлд хэрэглэсэн холбоо барих мэдээллийг дахин ашиглах
+          phone: Холбоо барих утас
+          phone_short: Утас
+          phone_placeholder: '99999999, 88888888'
           email: Имэйл
+          email_placeholder: 'example@gmail.com, example@yahoo.com'
         wanted:
           section_title: Сонирхож буй
           title: Сонирхож буй бараа бүтээгдэхүүн
           tooltip: test_tooltip
           placeholder: "Та өөрийн хүсэж буй барааны нэрийг # тэмдэгт ашиглан бичвэл хайлтанд илрэх илэрцэнд илүү үр дүнтэй. Жишээ нь: #SamsungGalaxyS6 #SamsungGalaxyS5"
+        save: Хадгалах
+        publish: Нэмэх
