--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -22,6 +22,14 @@ mn:
       search_bar:
         all_category: Бүгд
         search: Хайх
+      contact_info:
+        section_title: Холбоо барих мэдээлэл
+        reuse_recent_contacts: Сүүлд хэрэглэсэн холбоо барих мэдээллийг дахин ашиглах
+        phone: Холбоо барих утас
+        phone_short: Утас
+        phone_placeholder: '99999999, 88888888'
+        email: Имэйл
+        email_placeholder: 'example@gmail.com, example@yahoo.com'
     home:
       index:
         add_spec: Тохиролцоо оруулах
@@ -42,18 +50,10 @@ mn:
           add_spec:
             title: Мэдээлэл нэмэх
             name: Нэр
-            value: Утгас
+            value: Утга
             cancel: Буцах
             add: Нэмэх
           remove_spec: хасах
-        contact_info:
-          section_title: Холбоо барих мэдээлэл
-          reuse_recent_contacts: Сүүлд хэрэглэсэн холбоо барих мэдээллийг дахин ашиглах
-          phone: Холбоо барих утас
-          phone_short: Утас
-          phone_placeholder: '99999999, 88888888'
-          email: Имэйл
-          email_placeholder: 'example@gmail.com, example@yahoo.com'
         wanted:
           section_title: Сонирхож буй
           title: Сонирхож буй бараа бүтээгдэхүүн
@@ -61,3 +61,11 @@ mn:
           placeholder: "Та өөрийн хүсэж буй барааны нэрийг # тэмдэгт ашиглан бичвэл хайлтанд илрэх илэрцэнд илүү үр дүнтэй. Жишээ нь: #SamsungGalaxyS6 #SamsungGalaxyS5"
         save: Хадгалах
         publish: Нэмэх
+    bids:
+      new:
+        title: Санал илгээх
+        general_info:
+          title: Гарчиг
+          image: Зураг
+          description: Барааны тайлбар
+        bid:  Санал илгээх
