--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -15,6 +15,15 @@ mn:
       top_stat: 'Нийт: <strong>%{listing_total}</strong> тохиролцоо. Өнөөдөр: <strong>%{listing_today}</strong> тохиролцоо орсон байна.'
       about_us: Бидний тухай
       terms_of_use: Үйлчилгээний нөхцөл
+    login:
+      email_placeholder: И-Мэйл хаяг
+      password_placeholder: Нууц үг
+      login: Нэвтрэх
+      remember_me: cануулах
+      forgot_your_password: Нууц үгээ мартсан
+    registration:
+      register: Бүртгүүлэх
+
   js_view:
     general:
       category:
