--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -13,7 +13,6 @@ mn:
         email: И-Мэйл хаяг
   view:
     header:
-      top_stat: 'Нийт: <strong>%{listing_total}</strong> тохиролцоо. Өнөөдөр: <strong>%{listing_today}</strong> тохиролцоо орсон байна.'
       about_us: Бидний тухай
       terms_of_use: Үйлчилгээний нөхцөл
     login:
@@ -82,7 +81,7 @@ mn:
           remove_spec: хасах
         price:
           section_title: Үнэлгээ
-          is_free_item: Үнэгүй бараа
+          is_free_item: Үнэгүй
           min_price_range: Доод /₮/
           max_price_range: Дээд /₮/
         wanted:
@@ -114,7 +113,7 @@ mn:
           remove_spec: хасах
         price:
           section_title: Үнэлгээ
-          is_free_item: Үнэгүй бараа
+          is_free_item: Үнэгүй
           min_price_range: Доод /₮/
           max_price_range: Дээд /₮/
         wanted:
