--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -28,6 +28,7 @@ mn:
     bid_received: 'хэрэглэгч таны "%{listing_name}" тохиролцоонд "%{bid_name}" гэсэн санал илгээсэн байна'
     bid_updated: 'хэрэглэгч таны "%{listing_name}" тохиролцоонд илгээсэн "%{bid_name}" саналдаа өөрчлөлт оруулсан байна'
     bid_deleted: 'хэрэглэгч таны "%{listing_name}" тохиролцоонд илгээсэн "%{bid_name}" саналаа устгасан байна'
+    bid_deleted_because_of_listing_update: 'хэрэглэгч таны "%{bid_name}" саналыг илгээсэн "%{listing_name}" тохиролцоондоо өөрчлөлт оруулсан тул таны санал устгагдлаа'
     bid_accepted: 'хэрэглэгч таны "%{listing_name}" тохиролцоонд илгээсэн "%{bid_name}" саналыг хүлээн авсан байна'
     listing_updated: 'хэрэглэгч таны "%{bid_name}" санал илгээсэн "%{listing_name}" тохиролцоондоо өөрчлөлт оруулсан байна'
     listing_closed: 'хэрэглэгч таны "%{bid_name}" санал илгээсэн "%{listing_name}" тохиролцоогоо хаасан байна'
