--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -85,7 +85,7 @@ mn:
           section_title: Солилцооны мэдээлэл
           free_item: Үнэгүй хэлбэрээр байршуулах
           free_item_tooltip: Та өөрт хэрэгцээ багатай бараа бүтээгдэхүүнээ үнэгүй хэмээн байршуулснаар хэрэг болох нэгэн нь тантай холбогдон авах боломжтой юм
-          for_donation: Deal.MN сангийн тусламжийн бараанд хандивлах
+          for_donation: Сайн үйлсийн аянд хандивлах
           for_donation_tooltip: TODO
           price_range: Мөнгөн үнэлгээ
           price_range_tooltip: TODO
@@ -119,7 +119,7 @@ mn:
           section_title: Солилцооны мэдээлэл
           free_item: Үнэгүй хэлбэрээр байршуулах
           free_item_tooltip: Та өөрт хэрэгцээ багатай бараа бүтээгдэхүүнээ үнэгүй хэмээн байршуулснаар хэрэг болох нэгэн нь тантай холбогдон авах боломжтой юм
-          for_donation: Deal.MN сангийн тусламжийн бараанд хандивлах
+          for_donation: Сайн үйлсийн аянд хандивлах
           for_donation_tooltip: TODO
           price_range: Мөнгөн үнэлгээ
           price_range_tooltip: TODO
